tests/models/enum/named/i16/fail/le.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(le = 2.0)]
        value: i16
    },
}
fn main() {}
